Fix: Background image overflow on hero page.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -170,7 +170,7 @@ html {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
+    height: 100svh;
     z-index: -1;
     display: flex;
     justify-content: center;
@@ -191,7 +191,7 @@ html {
 
 .hero-container {
     width: 100%;
-    min-height: 100dvh;
+    height: 100dvh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -893,6 +893,10 @@ select:focus {
         justify-content: space-between;
         align-items: flex-end;
         cursor: pointer;
+    }
+
+    .hero-container {
+        height: 110dvh;
     }
 
     .logo span {
